@@ -1,3 +1,8 @@
+2006-01-15  Marco Barisione  <barisione@gmail.com>
+
+	* gtksourceview/gtksourcesimpleengine.c: use EggRegex instead of
+	gnu-regex
+
 2006-01-11  Marco Barisione  <barisione@gmail.com>
 
 	* gtksourceview/gtksourcecontextengine.c: cache the last child of the
